// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@Groups > OpenSpec > should display fields when a group match with (array & groups - OS3) 1`] = `
{
  "components": {
    "schemas": {
      "ChildModel": {
        "properties": {
          "id": {
            "type": "string",
          },
          "prop1": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "prop1",
        ],
        "type": "object",
      },
      "MyModelCreate": {
        "properties": {
          "prop3": {
            "minLength": 1,
            "type": "string",
          },
          "prop4": {
            "items": {
              "$ref": "#/components/schemas/ChildModel",
            },
            "type": "array",
          },
        },
        "required": [
          "prop3",
        ],
        "type": "object",
      },
      "MyModelDetails": {
        "properties": {
          "id": {
            "type": "string",
          },
          "prop1": {
            "minLength": 1,
            "type": "string",
          },
          "prop2": {
            "minLength": 1,
            "type": "string",
          },
          "prop3": {
            "minLength": 1,
            "type": "string",
          },
          "prop4": {
            "items": {
              "$ref": "#/components/schemas/ChildModel",
            },
            "type": "array",
          },
        },
        "required": [
          "prop1",
          "prop2",
          "prop3",
        ],
        "type": "object",
      },
    },
  },
  "paths": {
    "/": {
      "post": {
        "operationId": "myControllerCreateWithArray",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "items": {
                  "$ref": "#/components/schemas/MyModelCreate",
                },
                "type": "array",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/MyModelDetails",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Created",
          },
        },
        "tags": [
          "MyController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "MyController",
    },
  ],
}
`;

exports[`@Groups > OpenSpec > should display fields when a group match with - body and a group name (OS3) 1`] = `
{
  "components": {
    "schemas": {
      "ChildModel": {
        "properties": {
          "id": {
            "type": "string",
          },
          "prop1": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "prop1",
        ],
        "type": "object",
      },
      "MyModel": {
        "properties": {
          "id": {
            "type": "string",
          },
          "prop3": {
            "minLength": 1,
            "type": "string",
          },
          "prop4": {
            "items": {
              "$ref": "#/components/schemas/ChildModel",
            },
            "type": "array",
          },
        },
        "required": [
          "prop3",
        ],
        "type": "object",
      },
      "MyModelCompleteGroup": {
        "properties": {
          "id": {
            "type": "string",
          },
          "prop1": {
            "minLength": 1,
            "type": "string",
          },
          "prop2": {
            "minLength": 1,
            "type": "string",
          },
          "prop3": {
            "minLength": 1,
            "type": "string",
          },
          "prop4": {
            "items": {
              "$ref": "#/components/schemas/ChildModel",
            },
            "type": "array",
          },
        },
        "required": [
          "prop1",
          "prop2",
          "prop3",
        ],
        "type": "object",
      },
      "MyModelCreatePayload": {
        "properties": {
          "prop3": {
            "minLength": 1,
            "type": "string",
          },
          "prop4": {
            "items": {
              "$ref": "#/components/schemas/ChildModel",
            },
            "type": "array",
          },
        },
        "required": [
          "prop3",
        ],
        "type": "object",
      },
      "MyModelGroup": {
        "properties": {
          "id": {
            "type": "string",
          },
          "prop1": {
            "minLength": 1,
            "type": "string",
          },
          "prop2": {
            "minLength": 1,
            "type": "string",
          },
          "prop3": {
            "minLength": 1,
            "type": "string",
          },
          "prop4": {
            "items": {
              "$ref": "#/components/schemas/ChildModel",
            },
            "type": "array",
          },
        },
        "required": [
          "prop1",
          "prop2",
          "prop3",
        ],
        "type": "object",
      },
    },
  },
  "paths": {
    "/": {
      "post": {
        "operationId": "myControllerCreate",
        "parameters": [],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/MyModelCreatePayload",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "201": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/MyModelGroup",
                },
              },
            },
            "description": "Created",
          },
        },
        "tags": [
          "MyController",
        ],
      },
    },
    "/{id}": {
      "put": {
        "operationId": "myControllerUpdate",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/MyModelCompleteGroup",
              },
            },
          },
          "required": false,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/MyModel",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": [
          "MyController",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "MyController",
    },
  ],
}
`;
